--- a/LogisticHub/Views/Delivery/Index.cshtml
+++ b/LogisticHub/Views/Delivery/Index.cshtml
@@ -84,8 +84,21 @@
                     <i class="fa-solid fa-truck"></i>
                 </span>
                 <div class="form-floating">
-                    <input type="text" class="form-control" id="DeliveryStreet" name="DeliveryStreet" placeholder="Введите адрес доставки" value="@Model?.DeliveryStreet" />
+                    <input type="text" class="form-control" id="DeliveryStreet" name="DeliveryStreet" placeholder="Введите вес груза" value="@Model?.DeliveryStreet" />
                     <label for="DeliveryStreet" class="form-label">Адрес получателя</label>
+                </div>
+            </div>
+            @Html.ValidationMessageFor(model => model.DeliveryStreet, "", new { @class = "text-danger" })
+        </div>
+
+        <div class="mb-3">
+            <div class="input-group">
+                <span class="input-group-text">
+                    <i class="fa-solid fa-truck"></i>
+                </span>
+                <div class="form-floating">
+                    <input type="text" class="form-control" id="weight" name="weight" placeholder="Введите адрес доставки" value="@Model?.weight" />
+                    <label for="weight" class="form-label">Вес груза</label>
                 </div>
             </div>
             @Html.ValidationMessageFor(model => model.DeliveryStreet, "", new { @class = "text-danger" })
