Добавил Номер заказа

--- a/LogisticHub/Views/Delivery/Confirmation.cshtml
+++ b/LogisticHub/Views/Delivery/Confirmation.cshtml
@@ -1,7 +1,7 @@
-﻿@{
+﻿@{;
     ViewBag.Title = "Заявка отправлена";
 }
 
-<h2>Заявка отправлена</h2>
+<h2>Заявка № @ViewData["NumberOrder"] отправлена</h2>
 
 <p>Спасибо за вашу заявку! Мы свяжемся с вами в ближайшее время.</p>
